NATTQA-ENV/force-app/main/default/objects/NATT_Dealer_Ownership__c/NATT_Dealer_Ownership__c.object-meta.xml
<CustomObject>
    <description>For NATT Dealers</description>
    <label>Dealer Ownership</label>
    <nameField>
        <label>Ownership Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer Ownership</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>