NATTQA-ENV/force-app/main/default/objects/NATT_Dealer_Ownership__c/fields/NATT_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_Comments__c</fullName>
    <description>NATT Comments</description>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>