NATTQA-ENV/force-app/main/default/objects/NATT_Dealer_Ownership__c/fields/NATT_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>NATT_Contact_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NATT</description>
    <label>Contact Info</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Dealer Ownerships</relationshipLabel>
    <relationshipName>Dealer_Ownerships</relationshipName>
    <type>Lookup</type>
</CustomField>