NATTQA-ENV/force-app/main/default/objects/NATT_Dealer_Ownership__c/fields/NATT_Dealer__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NATT - the dealership that this owner owns</description>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer Ownership</relationshipLabel>
    <relationshipName>Dealer_Ownerships</relationshipName>
    <type>Lookup</type>
</CustomField>