NATTQA-ENV/force-app/main/default/objects/NATT_Dealer_Ownership__c/fields/NATT_Ownership_Group__c.field-meta.xml
<CustomField>
    <fullName>NATT_Ownership_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NATT - the owned ownership group</description>
    <label>Ownership Group</label>
    <referenceTo>NATT_Dealer_Ownership__c</referenceTo>
    <relationshipLabel>Ownership Members</relationshipLabel>
    <relationshipName>Ownership_Members</relationshipName>
    <type>Lookup</type>
</CustomField>