NATTQA-ENV/force-app/main/default/objects/NATT_Dealer_Ownership__c/fields/NATT_Ownership_Percent__c.field-meta.xml
<CustomField>
    <fullName>NATT_Ownership_Percent__c</fullName>
    <description>NATT - percent of ownership for the group</description>
    <label>Ownership Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>